<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Party Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--
    strings for login_page
      -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="party_planner_question">Not yet a party planner?</string>
    <string name="sign_up">Sign up!!</string>

    <!--
    strings for settings_page
      -->
    <string name="name">Name: </string>
    <string name="nick">Nick</string>
    <string name="change_user">Change Username / Password</string>
    <string name="delete_parties">Delete Parties</string>

    <!--
    strings for food_editor_menu_page
      -->
    <string name="dish_editor">Dish Editor</string>
    <string name="menu_editor">Menu Editor</string>

    <!--
    strings for dish_editor_page
      -->
    <string name="current_dishes">Current Dishes</string>
    <string name="button_add">Add Dish</string>
    <string name="button_edit">Edit Dish</string>
    <string name="button_delete">Del Dish</string>

    <!--
    strings for dish_editor_page
        -->
    <string name="adding_dishes">New Dish Entry</string>
    <string name="new_dish_name">New Dish Name</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>

    <!--
    strings for dish_editor_page
        -->
    <string name="add_new_instruction">Add a new instruction...</string>
    <string name="add_new_recipe">Add new recipe!</string>
    <string name="go_to_instructions">Start adding instructions</string>


    <!--
    strings for menu_editor_page
        -->
    <string name="menu_editor_page">Menu Editor Page</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>

    <!--
    strings for menu_editor_page2
    -->
    <string name="menu_adding_new">Add a new menu</string>
    <string name="menu_adding_name">Name of new menu</string>
    <string name="sort_by">Sort by:</string>
    <string name="starters">Starters</string>
    <string name="mains">Mains</string>
    <string name="desserts">Desserts</string>
    <string name="save_menu">Save Menu</string>

    <!--
    strings for party_main_page
    -->
    <string name="select_or_create_party">Select or create a new party</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main_food_editor">MainFoodEditorActivity</string>
    <string name="title_activity_choosing_party">ChoosingPartyActivity</string>
    <string name="title_activity_party_editor">PartyEditorActivity</string>

</resources>
