<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.47"
            android:paddingLeft="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nick"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.79"></RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_user"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_parties"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="78dp"
        android:layout_height="99dp"
        android:id="@+id/imageView5"
        android:src="@drawable/back_icon" />
</LinearLayout>