<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/adding_dishes"
        android:id="@+id/textView12"
        android:layout_margin="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:id="@+id/listView3"
        android:layout_weight="0.70" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_gravity="center_horizontal"
        android:hint="@string/add_new_instruction" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="57dp"
            android:layout_height="75dp"
            android:id="@+id/imageView8"
            android:src="@drawable/back_icon" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_recipe"
            android:id="@+id/button9"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp" />

    </LinearLayout>

</LinearLayout>