<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_editor_page"
        android:id="@+id/textView13"
        android:layout_margin="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:id="@+id/listView4"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_weight="0.11" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.76"
        android:layout_margin="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_delete"
            android:id="@+id/button12"
            android:layout_gravity="center_horizontal"
            android:layout_margin="29dp"
            android:gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_add"
            android:id="@+id/button11"
            android:layout_gravity="center_horizontal"
            android:layout_margin="29dp"
            android:gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit"
            android:id="@+id/button13"
            android:layout_margin="29dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:layout_width="81dp"
        android:layout_height="59dp"
        android:id="@+id/button14"
        android:background="@drawable/back_icon"
        android:layout_weight="0.16" />

</LinearLayout>